@@ -5,6 +5,7 @@ import java.util.EmptyStackException;
 
 public class SimpleStack implements Stack{
 
+
     ArrayList<Double> stack = new ArrayList<>();
     public boolean isEmpty(){
        return this.stack.isEmpty();
@@ -20,17 +21,13 @@ public class SimpleStack implements Stack{
     }
 
     public double peek() throws EmptyStackException {
-        if (this.isEmpty()){
-            throw new EmptyStackException();
-        }
         return this.stack.get(this.stack.size()-1);
-    }
+    } /**
+     * Removes the object at the top of this stack and returns * that object as the value of this function.
+     * @throws EmptyStackException if this stack is empty.
+     */
     public double pop() throws EmptyStackException{
-        if (this.isEmpty()){
-            throw new EmptyStackException();
-        }
-        double item = this.peek();
-        this.stack.remove(this.stack.size()-1);
-        return item;
-    }
+        return this.stack.removeLast();
+        /*if ( ) size > 1, throws exceptions */
+    };
 }
